# personal_finance

./: .codegraph  .gitignore  AGENTS.md  README.md  deploy.sh  personal_finance.env.example
.omo/plans/: account-transfer.md
backend/: .env.example  .env.production.template  .gitignore  pyproject.toml  start.sh
backend/config/: pagination.py  settings.py  urls.py
backend/finance/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/finance/management/commands/: seed_accounts.py  seed_data.py
backend/finance/migrations/: 0001_initial.py  0002_alter_category_options_alter_ledger_options_and_more.py  0003_alter_category_category_ledger_and_more.py  0004_account_transaction_account_transfer.py  0005_accounttype_alter_account_account_type.py  0006_remove_old_type_and_nonnull_account_type.py  0007_make_transaction_account_nonnull.py
backend/test/: test.py
backend/users/: constants.py  serializers.py  urls.py  views.py
backend/utils/: __init__.py  code_enum.py  exception_handler.py  exceptions.py  logger.py  permission_service.py  permissions.py  renderers.py  response.py
docs/: design.md  todolist.md  usage-guide.md
frontend/: .env.example  .env.production.template  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: types.ts
frontend/src/api/auth/: index.ts  (+1 more)
frontend/src/axios/: axios.ts
frontend/src/components/: TransactionForm.vue
frontend/src/pages/: Dashboard.vue  MainLayout.vue  Settings.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
(+15 files in other folders)
